# fiware_actuators_setup

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
docker/config/iot-agent/: .gitkeep  config.js
docker/config/mosquitto/: .gitkeep  mosquitto.conf
docs/: architecture.md
src/fiware_actuators_setup/: config.py  exceptions.py
src/fiware_actuators_setup/clients/: __init__.py  iot_agent.py  orion.py
src/fiware_actuators_setup/models/: __init__.py  device.py  service.py  subscription.py
tests/: test_clients_iot_agent.py  test_clients_orion.py  test_config.py  test_models_device.py  test_models_service.py  test_models_subscription.py
tests/integration/: conftest.py  test_iot_agent_integration.py  test_orion_integration.py
tests/units/: test_clients_iot_agent.py  test_clients_orion.py  test_config.py  test_models_device.py  test_models_service.py  test_models_subscription.py
