[project]
name = "fiware_actuators_setup"
version = "0.1.0"
description = "Utilities for managing FIWARE devices."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Marco Alice" }
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
where = ["src"]
